<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFIY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstones_my_own_app">CAPSTONES: MY OWN APP</string>
    <string name="message">This button will launch my capstones app!</string>
    <string name="text">My Nanodegree Apps!</string>
</resources>
