<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tw.invictus.projectzero.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:text="@string/text"
        android:id="@+id/title" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/spotify_streamer"
        android:background="@color/colorOrange"
        android:onClick="onClick"
        android:layout_margin="@dimen/button_margin"
        android:id="@+id/spotify_streamer_button" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/scores_app"
        android:background="@color/colorOrange"
        android:onClick="onClick"
        android:layout_margin="@dimen/button_margin"
        android:id="@+id/scores_app_button" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/library_app"
        android:background="@color/colorOrange"
        android:onClick="onClick"
        android:layout_margin="@dimen/button_margin"
        android:id="@+id/library_app_button" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/build_it_bigger"
        android:background="@color/colorOrange"
        android:onClick="onClick"
        android:layout_margin="@dimen/button_margin"
        android:id="@+id/build_it_bigger_button" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/xyz_reader"
        android:onClick="onClick"
        android:background="@color/colorOrange"
        android:layout_margin="@dimen/button_margin"
        android:id="@+id/xyz_reader_button" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/capstones_my_own_app"
        android:background="@color/colorAccent"
        android:onClick="onClick"
        android:layout_margin="@dimen/button_margin"
        android:id="@+id/capstones_my_own_app_button" />
</LinearLayout>
